--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,4 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <fm-footer></fm-footer>
