--- a/src/app/core/core/footer/footer.component.html
+++ b/src/app/core/core/footer/footer.component.html
@@ -1,3 +1,4 @@
-<p>
-  footer works!
-</p>
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="#">Katarzyna Rzeźnik</a>.
+</div>
