Adds link to github account

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-  Coded by <a href="#">Katarzyna Rzeźnik</a>.
+  Coded by <a href="https://github.com/rzeznik-kasia">Katarzyna Rzeźnik</a>.
 </div>
