Adds testimonial content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<fm-testimonial></fm-testimonial>
+<fm-testimonial [testimonial]="testimonials[0]"></fm-testimonial>
 <fm-slider></fm-slider>
 <fm-footer></fm-footer>
