Adds font styling

--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -1,4 +1,4 @@
-<p>{{data.description}}</p>
-<p>{{data.name}}</p>
-<p>{{data.jobName}}</p>
+<p class="lighter">"{{data.description}}"</p>
+<p class="signature">{{data.name}}</p>
+<p class="signature lightness">{{data.jobName}}</p>
 <p><img [src]="data.imageUrl"></p>
