Changes icon path

--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,7 +1,7 @@
 <ng-template slide-host></ng-template>
 <button (click)="prev()">
-  <img src="/assets/images/icon-prev.svg" role='image'>
+  <img src="/assets/icon-prev.svg" role='image'>
 </button>
 <button (click)="next()">
-  <img src="/assets/images/icon-next.svg" role='image'>
+  <img src="/assets/icon-next.svg" role='image'>
 </button>
